# edge-detection

./: AngleTranslationUtils.h  CMakeLists.txt  CoordinateCalculator.h  DataProvider.h  DrawingUtils.h  FilterProvider.h  ImageGenerator.h  Network.h  cmake_install.cmake  main.cpp  readme.md
